--- a/modes/celve_moshi.html
+++ b/modes/celve_moshi.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='zh'>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset='UTF-8'>
+  <title>Title</title>
+  <style>
+    .area{
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        background-color: lightseagreen;
+    }
+  </style>
 </head>
 <body>
-$END$
+<div class='area'>
+</div>
+<script src='./celve_moshi.js'></script>
 </body>
 </html>
